@startuml
!include style.puml

allow_mixing
hide empty members
left to right direction
!define exception(name) class name << (E,#FFAAAA) >>

node Postgres as postgres <<TCP/5433>> {
    database "heroes-database" as db
}

node Quarkus as quarkus <<HTTP/8083>> {
    package "hero-api" as heroapi {
        entity Hero
        class HeroResource
        class HeroService
        artifact "index<U+002E>html" as index
        artifact "application<U+002E>properties" as properties
        artifact "import<U+002E>sql" as import
        HeroResource ..> HeroService
        HeroResource .> Hero
        properties .[hidden].> import
        Hero .[hidden].> index
    }
}

package "tests" as tests {
    class HeroResourceTest
    class NativeHeroResourceIT
}

HeroService ....> postgres
heroapi .[hidden].> tests

@enduml
